[tool.poetry]
name = "starring"
version = "0.1.0"
description = ""
authors = ["Andrea Coppari <andrea.coppari@wonderflow.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
cinemagoer = "^2022.2.11"
transformers = "^4.19.2"
torch = "^1.11.0"
pymongo = {extras = ["srv"], version = "^4.1.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
